        - Decrease number of pre-forked Amavisd processes to 4 to reduce
          memory usage.
        - Add missing SQL column (mailbox.enableindexer-worker) and LDAP
          attribute/value pair: enabledService=indexer-worker. Required by
          Dovecot.
          Thanks dwbotsch <botsch _at_ cnf.cornell.edu> for the report.

    * Updated packages:
        + Roundcube webmail -> 1.0.2

    * Below packages are removed from iRedMail for security concern:
        - phpMyAdmin
        - phpPgAdmin

      If you need a sql management tool, please try http://adminer.org/
      (web-based, a single PHP file) or other desktop applications instead.

iRedMail-0.8.7:
    * Works on new Linux/BSD distribution releases:
        + Ubuntu 14.04 LTS. With MariaDB support.
        + OpenBSD 5.5

    * Drop support for below releases:
        - Ubuntu 13.04, 13.10
        - OpenBSD 5.4

    * Increase default Amavisd prefork children to 10 (default is 2).
    * Allows sasl authentication ONLY over a TLS-encrypted smtp connection.
    * Enable LMTP service in Dovecot by default.
      To use LMTP instead of Dovecot LDA as per-domain or per-user local
      deliver agent in Postfix, you need to use one of below:
        - LMTP socket: lmtp:unix:private/dovecot-lmtp
        - LMTP inet listener: lmtp:inet:127.0.0.1:24

    * Removed columns for MySQL and PostgreSQL backends:
        - domain.defaultlanguage
        - domain.defaultuserquota
        - domain.defaultuseraliases
        - domain.disableddomainprofiles
        - domain.disableduserprofiles
        - domain.defaultpasswordscheme
        - domain.minpasswordlength
        - domain.maxpasswordlength

      They all are merged into column 'domain.settings'. For example:
      domain.settings='default_language:en_US;default_user_quota:1024;'

      Please check iRedMail upgrade tutorial to migrate these columns:
      http://www.iredmail.org/wiki/index.php?title=Upgrade/iRedMail/0.8.6-0.8.7
